2008.11.05: David Nichols
	* fixed a memory error parsing expressions with the map operator
	* event subsystem fixes and improvements, FtpClient event support

2008.11.04: David Nichols
	* fixed a bug in QoreString::set()
 	* fixed 2 crashing bugs in Operator.cc with the "-" operator: the
	  operator functions were expecting certain arguments but the oeprator
	  code was making partial matches and sending other types to the
	  functions.  Added the abilty for an operator function to require an
	  exact argument match for both arguments.
	* added the possibilty to define a default function that returns
	  NOTHING if no partial match is made to any operator functions so
	  that nonsensical results are not returned (i.e. before change:
	  NOTHING - NOTHING produced: "<time: 0 seconds>", after change, this
	  produces "NOTHING")

2008.11.03: David Nichols
	* fixed a crashing bug in the FtpClient class
	* fixed a parsing bug with the switch statement when a case value using
	  a constant was not resolved caused a crash: affected debug mode only

2008.10.30: David Nichols
	* updated module handling: modules are now checked for having the
	  module api appended to their name in descendnig order; i.e. if qore
	  supports module-apis 0.5 and 0.4, and a program requests feature
	  "x", qore will look for x-api-0.5.qmod, then x-api-0.4.qmod, and
	  then finally x.qmod in each of the module directories
	* default module directory changed to $libdir/qore-modules in order to
	  avoid creating a new directory for each minor change in the
	  supported api

2008.10.29: David Nichols
	* fixed parsing XML-RPC arrays when the first element is empty
	* added the xml string as the optional exception argument for many
	  exceptions in XML parsing

2008.10.22: David Nichols
	* implemented support for multiple module APIs
        * updated ABI to 5.0, module-api to 0.5, declared module compatilibity
	  for module api 0.4